--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "id": "84ed6b83",
    "metadata": {},
    "outputs": [],
@@ -10,34 +10,30 @@
     "import pickle\n",
     "\n",
     "import geopandas as gpd\n",
-    "from shapely import Point, LineString, MultiLineString, Polygon, MultiPolygon\n",
     "import osmnx as ox\n",
-    "import networkx as nx\n",
-    "import matplotlib\n",
     "from scipy.spatial import cKDTree\n",
-    "import numpy as np\n",
     "import networkx as nx\n",
     "\n",
-    "from my_paths import *"
+    "from my_paths import *\n",
+    "import Graph_functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "id": "3a4e52ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "507be72b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "PATH_STRADE_CICLABILI_PICKLE_RAW = \"../Data/Raw/Info_bici/strade_ciclabili.pickle\"\n",
+    "PATH_STRADE_CICLABILI_PICKLE_STAGING = \"../Data/Staging/Info_bici/strade_ciclabili.pickle\"\n",
+    "PATH_STRADE_CICLABILI_GEOJSON_STAGING = \"../Data/Staging/Info_bici/strade_ciclabili.geojson\"\n",
+    "\n",
+    "PATH_CICLABILI_PICKLE_STAGING = \"../Data/Staging/Info_bici/ciclabile.pickle\"\n",
+    "PATH_CICLABILI_GEOJSON_STAGING = \"../Data/Staging/Info_bici/ciclabile.geojson\"\n",
+    "\n",
+    "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\"\n",
+    "\n",
     "CRS_GRAD = \"EPSG:4326\"  # Lat-Long\n",
     "CRS_METR = \"EPSG:32632\" # Metri"
    ]
@@ -47,7 +43,7 @@
    "id": "acb48c30",
    "metadata": {},
    "source": [
-    "## Creazione strade da openstreet maps (Da passare su notebook ETL)"
+    "## Creazione Strade ciclabili Graph (compreso ingestion da openstreet maps)"
    ]
   },
   {
@@ -55,12 +51,12 @@
    "id": "a1d21d7c",
    "metadata": {},
    "source": [
-    "Ingestion da openstreet maps"
+    "Ingestion da openstreet maps e salviamo in Raw (pickle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "6c9e2a7f",
    "metadata": {},
    "outputs": [],
@@ -70,28 +66,28 @@
     "bike_filter = (\n",
     "    '[\"highway\"][\"bicycle\"!~\"no\"][\"bicycle\"!~\"dismount\"]'\n",
     ")\n",
-    "G_ox_strade = ox.graph_from_place(place, network_type='bike', custom_filter=bike_filter)"
+    "G_ox_strade = ox.graph_from_place(place, network_type='bike', custom_filter=bike_filter)\n",
+    "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"wb\") as f:\n",
+    "    pickle.dump(G_ox_strade, f)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "652f6e11",
+   "id": "e4b383fc",
    "metadata": {},
    "source": [
-    "Conversione nei 2 geodataframe - conversione dei nodi nei due sistemi crs"
+    "Carichiamo il file da Row e modifichiamolo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_ox_strade_copy = G_ox_strade.copy()\n",
-    "gdf_nodes_METR, gdf_edges = ox.graph_to_gdfs(G_ox_strade_copy)\n",
-    "gdf_nodes_METR = gdf_nodes_METR.to_crs(CRS_METR)\n",
-    "gdf_nodes_GRAD = gdf_nodes_METR.to_crs(CRS_GRAD)"
+    "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
+    "    G_strade = pickle.load(f)"
    ]
   },
   {
@@ -104,52 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "548f0c1a",
+   "execution_count": 4,
+   "id": "d83de30b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = np.array([[geom.x, geom.y] for geom in gdf_nodes_METR.geometry])\n",
-    "\n",
-    "tree = cKDTree(coords)\n",
-    "pairs = tree.query_pairs(r=5)  # distanza massima in metri\n",
-    "\n",
-    "for i, j in pairs:\n",
-    "    u = gdf_nodes_GRAD.iloc[i].geometry.coords[0]\n",
-    "    v = gdf_nodes_GRAD.iloc[j].geometry.coords[0]\n",
-    "\n",
-    "    if not G_ox_strade_copy.has_edge(u, v):\n",
-    "        length = LineString([gdf_nodes_METR.iloc[i].geometry.coords[0], gdf_nodes_METR.iloc[j].geometry.coords[0]]).length\n",
-    "        G_ox_strade_copy.add_edge(u, v, geometry=LineString([u,v]), artificial=True, weight=length)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c64b6018",
-   "metadata": {},
-   "source": [
-    "Graph -> GeoDataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "697b53d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_nx = nx.Graph(G_ox_strade_copy.to_undirected())\n",
-    "edge_data = []\n",
-    "\n",
-    "for u, v, data in G_nx.edges(data=True):\n",
-    "    data_copy = data.copy()\n",
-    "    data_copy.update({'u': u, 'v': v,})\n",
-    "    edge_data.append(data_copy)\n",
-    "\n",
-    "gdf_edges = gpd.GeoDataFrame(edge_data, geometry='geometry', crs=CRS_GRAD)\n",
-    "gdf_edges[\"osmid\"] = gdf_edges[\"osmid\"].apply(lambda x: x[0] if isinstance(x, list) else x)\n",
-    "gdf_edges.loc[gdf_edges[\"osmid\"].isna(), \"osmid\"] = -1\n",
-    "gdf_edges[\"osmid\"] = gdf_edges[\"osmid\"].astype(int)"
+    "G_strade = G_strade.to_undirected()\n",
+    "G_strade = Graph_functions.add_edge_near_nodes(G_strade)"
    ]
   },
   {
@@ -157,20 +114,23 @@
    "id": "aabf08d5",
    "metadata": {},
    "source": [
-    "Salva GeoJson & Pickle"
+    "Salva GeoJson & Pickle in staging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "02eef17a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_edges.to_file(PATH_TEST_STAGING+\"strade.geojson\", driver=\"GeoJSON\")\n",
+    "_, gdf_edges = ox.graph_to_gdfs(G_strade)\n",
     "\n",
-    "with open(PATH_TEST_STAGING+\"strade.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(G_nx, f)"
+    "# Andrebbe pulito il geojson ma per ora lo usiamo solo per visualizzazione su kepler\n",
+    "gdf_edges.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\")\n",
+    "\n",
+    "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
+    "    pickle.dump(G_strade, f)"
    ]
   },
   {
@@ -178,49 +138,7 @@
    "id": "4f043502",
    "metadata": {},
    "source": [
-    "## Converte usando networkx (Da passare su notebook ETL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfc4977d",
-   "metadata": {},
-   "source": [
-    "Dichiariamo 2 funzioni:\n",
-    "1. Conversione: **GeoDataFrame -> Graph**, per quanto riguarda percorsi di Linestring.\n",
-    "2. Conversione: **Graph -> GeoDataFrame**, questa in teoria funziona su tutti i Graph."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ffa0d3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def percorsi_geojson_to_graph(gdf: gpd.GeoDataFrame) -> nx.Graph:\n",
-    "    G = nx.Graph()\n",
-    "\n",
-    "    for _, row in gdf.iterrows():\n",
-    "        geom = row.geometry\n",
-    "\n",
-    "        coords = list(geom.coords)\n",
-    "\n",
-    "        for i in range(len(coords) - 1):\n",
-    "            u = tuple(coords[i])\n",
-    "            v = tuple(coords[i + 1])\n",
-    "            length = gpd.GeoDataFrame([LineString([u, v])], columns=[\"geometry\"], crs=CRS_GRAD).to_crs(CRS_METR)[\"geometry\"][0].length\n",
-    "            G.add_edge(u, v, weight=length, geometry=LineString([u, v]))\n",
-    "    return G\n",
-    "\n",
-    "def graph_to_geodataframe(G: nx.Graph) -> gpd.GeoDataFrame:\n",
-    "    edge_data = []\n",
-    "    for u, v, data in G.edges(data=True):\n",
-    "        data_copy = data.copy()\n",
-    "        data_copy.update({'u': u, 'v': v,})\n",
-    "        edge_data.append(data_copy)\n",
-    "\n",
-    "    return gpd.GeoDataFrame(edge_data, geometry='geometry', crs=CRS_GRAD)"
+    "## Creazione Ciclabili Graph"
    ]
   },
   {
@@ -233,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -250,8 +168,38 @@
     "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
     "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
     "\n",
-    "G_ciclabili = percorsi_geojson_to_graph(gdf_ciclabili_staging)\n",
-    "with open(PATH_TEST_STAGING+\"rete_ciclabile.pickle\", \"wb\") as f:\n",
+    "G_ciclabili = Graph_functions.gdf_to_graph(gdf_ciclabili_staging)\n",
+    "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
+    "    pickle.dump(G_ciclabili, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7db1d8cd",
+   "metadata": {},
+   "source": [
+    "Anche qui aggiungiamo connessioni artificiali tra nodi vicini non connessi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4770ac5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carichiamo MultiDiGraph da file pickle\n",
+    "with open(PATH_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
+    "    G_ciclabili = pickle.load(f)\n",
+    "\n",
+    "# Aggiungiamo archi artificiali\n",
+    "G_ciclabili = G_ciclabili.to_undirected()\n",
+    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili)\n",
+    "\n",
+    "# Salviamo pickle e geojson in staging\n",
+    "_, gdf_edges = ox.graph_to_gdfs(G_ciclabili)\n",
+    "gdf_edges.to_file(PATH_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\") # Anche questo andrebbe ripulito\n",
+    "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_ciclabili, f)"
    ]
   },
@@ -278,11 +226,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_TEST_STAGING+\"rete_ciclabile.pickle\", \"rb\") as f:\n",
+    "# Carichiamo Graph Ciclabili\n",
+    "with open(PATH_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
     "    G_ciclabili = pickle.load(f)\n",
-    "with open(PATH_TEST_STAGING+\"strade.pickle\", \"rb\") as f:\n",
-    "    G_strade = pickle.load(f)"
+    "\n",
+    "# Carichiamo Graph Strade\n",
+    "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
+    "    G_strade = pickle.load(f)\n",
+    "\n",
+    "# Carichiamo Parchi GeoDataFrame\n",
+    "gdf_parchi = gpd.read_file(PATH_PARCHI_RAW)\n",
+    "\n",
+    "# Troviamo i centroid e mettiamoli in un dizionari di Punti come tuple\n",
+    "gdf_parchi[\"centroid\"] = gdf_parchi.geometry.centroid\n",
+    "poi_nodes = {}\n",
+    "for idx, row in gdf_parchi.iterrows():\n",
+    "    poi_nodes[idx] = (row[\"centroid\"].x, row[\"centroid\"].y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25f5b299",
+   "metadata": {},
+   "source": [
+    "Uniamo in un unico graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "659b6411",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
