--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3a4e52ed",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,7 @@
     "PATH_CICLABILI_PICKLE_STAGING = \"../Data/Staging/Info_bici/ciclabile.pickle\"\n",
     "PATH_CICLABILI_GEOJSON_STAGING = \"../Data/Staging/Info_bici/ciclabile.geojson\"\n",
     "\n",
-    "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\"\n",
-    "\n",
-    "CRS_GRAD = \"EPSG:4326\"  # Lat-Long\n",
-    "CRS_METR = \"EPSG:32632\" # Metri"
+    "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\""
    ]
   },
   {
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6c9e2a7f",
    "metadata": {},
    "outputs": [],
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d83de30b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -168,7 +165,7 @@
     "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
     "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
     "\n",
-    "G_ciclabili = Graph_functions.gdf_to_graph(gdf_ciclabili_staging)\n",
+    "G_ciclabili = Graph_functions.geojson_to_graph(gdf_ciclabili_staging)\n",
     "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_ciclabili, f)"
    ]
