--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from shapely import Point\n",
-    "from shapely.geometry import MultiPolygon, Polygon\n",
+    "from shapely import Point, MultiPolygon, Polygon\n",
     "from shapely.ops import unary_union\n",
     "\n",
     "import geopandas as gpd\n",
+    "import osmnx as ox\n",
     "\n",
     "from my_paths import *"
    ]
@@ -35,13 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36044d24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_MUNICIPI_RAW)\n",
-    "gdf = gdf.to_crs(\"EPSG:4326\")\n",
+    "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(CRS_GRAD)\n",
     "gdf.to_file(PATH_MUNICIPI_CLEAN)"
    ]
   },
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9383f129",
    "metadata": {},
    "outputs": [],
@@ -89,11 +88,11 @@
     "        })\n",
     ").reset_index()\n",
     "\n",
-    "gdf_parchi_uniti = gdf_parchi_uniti.set_crs('EPSG:4326').to_crs(\"EPSG:32632\")\n",
+    "gdf_parchi_uniti = gdf_parchi_uniti.set_crs(CRS_GRAD).to_crs(CRS_METR)\n",
     "gdf_parchi_uniti['PERIM_M'] = gdf_parchi_uniti.geometry.apply(lambda geom: unary_union(geom).boundary.length)\n",
     "gdf_parchi_uniti['AREA_MQ'] = gdf_parchi_uniti.geometry.area\n",
     "\n",
-    "gdf_parchi_uniti = gdf_parchi_uniti.to_crs('EPSG:4326')"
+    "gdf_parchi_uniti = gdf_parchi_uniti.to_crs(CRS_GRAD)"
    ]
   },
   {
@@ -130,17 +129,19 @@
    "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_FONTANE_RAW, sep=\";\")\n",
-    "gdf[\"Location\"] = gdf[\"Location\"].apply(lambda x: Point((float(x.strip(\"(\").strip(\")\").strip().split(\",\")[1]),\n",
-    "                                                        float(x.strip(\"(\").strip(\")\").strip().split(\",\")[0]))))\n",
-    "gdf = gdf.rename(columns = {'objectID':'id_fontane',\n",
-    "                           'MUNICIPIO':'municipio',\n",
-    "                           'ID_NIL': 'id_nome',\n",
-    "                           'NIL': \"nome\",\n",
-    "                           'LONG_X_4326':'longitudine',\n",
-    "                           'LAT_Y_4326': 'latitudine',\n",
-    "                           'Location':'geometry'})\n",
+    "gdf[\"Location\"] = gdf.apply(lambda row: Point(float(row[\"LONG_X_4326\"]), float(row[\"LAT_Y_4326\"])), axis=1)\n",
+    "columns = {\n",
+    "    'objectID':'id_fontane',\n",
+    "    'MUNICIPIO':'municipio',\n",
+    "    'NIL': \"nome\",\n",
+    "    'LONG_X_4326':'longitudine',\n",
+    "    'LAT_Y_4326': 'latitudine',\n",
+    "    'Location':'geometry'\n",
+    "}\n",
+    "gdf = gdf[columns.keys()]\n",
+    "gdf = gdf.rename(columns=columns)\n",
     "gdf['icon'] = \"events\"\n",
-    "gdf = gpd.GeoDataFrame(gdf, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "gdf = gpd.GeoDataFrame(gdf, geometry=\"geometry\", crs=CRS_GRAD)\n",
     "gdf.to_file(PATH_FONTANE_CLEAN, driver=\"GeoJSON\")"
    ]
   },
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "6d4c4779",
    "metadata": {},
    "outputs": [],
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "a0917ac6",
    "metadata": {},
    "outputs": [],
@@ -208,7 +209,7 @@
     "    \"descrizione_codice\": group_descrizione,\n",
     "    \"geometry\": group_geometry\n",
     "})\n",
-    "gdf = gpd.GeoDataFrame(gdf)"
+    "gdf = gpd.GeoDataFrame(gdf)\n"
    ]
   },
   {
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "9f53a865",
    "metadata": {},
    "outputs": [
@@ -248,18 +249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e36db582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "gdf = gpd.read_file(PATH_BIBLIOTECHE_RAW)\n",
     "print(type(gdf))\n",
     "column = {\n",
-    "    \"Indirizzo\": \"Indirizzo\",\n",
-    "    \"CAP\": \"CAP\",\n",
     "    \"MUNICIPIO\": \"Municipio\",\n",
-    "    \"NIL\": \"Quartiere\",\n",
+    "    \"NIL\": \"NIL\",\n",
     "    \"long\": \"Longitudine\",\n",
     "    \"lat\": \"Latitudine\",\n",
     "    \"geometry\": \"geometry\"\n",
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f3e1f1e9",
    "metadata": {},
    "outputs": [],
@@ -312,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "3366618a",
    "metadata": {},
    "outputs": [],
@@ -329,10 +336,12 @@
     "}\n",
     "# Modifico nomi e tengo solo colonne che mi serono per primarie\n",
     "gdf_primarie = gdf_primarie[gdf_primarie[\"ANNOSCOL\"] == 2324].reset_index()\n",
-    "gdf_primarie = gdf_primarie.rename(columns=column_prim_sec1)[column_prim_sec1.values()]\n",
+    "gdf_primarie = gdf_primarie[column_prim_sec1.keys()]\n",
+    "gdf_primarie = gdf_primarie.rename(columns=column_prim_sec1)\n",
     "# e secondarie \n",
     "gdf_secondarie_1 = gdf_secondarie_1[gdf_secondarie_1[\"ANNOSCOL\"] == 2324].reset_index()\n",
-    "gdf_secondarie_1 = gdf_secondarie_1.rename(columns=column_prim_sec1)[column_prim_sec1.values()]\n",
+    "gdf_secondarie_1 = gdf_secondarie_1[column_prim_sec1.keys()]\n",
+    "gdf_secondarie_1 = gdf_secondarie_1.rename(columns=column_prim_sec1)\n",
     "gdf_secondarie_1[\"Grado\"] = \"Scuola secondaria - Primo grado\""
    ]
   },
@@ -346,51 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ebd4ea05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_sec2 = {\n",
+    "column_sec2_uni = {\n",
     "    \"DENOMINAZ\": \"Denominazione\",\n",
     "    \"TIPOLOGIA\": \"Grado\",\n",
     "    \"INDIRIZZO\": \"Indirizzo\",\n",
     "    \"MUNICIPIO\": \"Municipio\",\n",
-    "    \"NIL\": \"Quartiere\",\n",
+    "    \"NIL\": \"NIL\",\n",
     "    \"LONG_X_4326\": \"Longitudine\",\n",
     "    \"LAT_Y_4326\": \"Latitudine\",\n",
     "    \"geometry\": \"geometry\"\n",
     "}\n",
-    "gdf_secondarie_2 = gdf_secondarie_2.rename(columns=column_sec2)[column_sec2.values()]\n",
-    "gdf_secondarie_2[\"Grado\"] = \"Scuola secondaria - Secondo grado\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "545a39d0",
-   "metadata": {},
-   "source": [
-    "Uguale per università"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d771453",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_uni = {\n",
-    "    \"DENOMINAZ\": \"Denominazione\",\n",
-    "    \"TIPOLOGIA\": \"Grado\",\n",
-    "    \"INDIRIZZO\": \"Indirizzo\",\n",
-    "    \"MUNICIPIO\": \"Municipio\",\n",
-    "    \"NIL\": \"Quartiere\",\n",
-    "    \"LONG_X_4326\": \"Longitudine\",\n",
-    "    \"LAT_Y_4326\": \"Latitudine\",\n",
-    "    \"geometry\": \"geometry\"\n",
-    "}\n",
-    "gdf_universita = gdf_universita.rename(columns=column_uni)[column_uni.values()]\n",
+    "gdf_secondarie_2 = gdf_secondarie_2[column_sec2_uni.keys()]\n",
+    "gdf_secondarie_2 = gdf_secondarie_2.rename(columns=column_sec2_uni)\n",
+    "gdf_secondarie_2[\"Grado\"] = \"Scuola secondaria - Secondo grado\"\n",
+    "\n",
+    "gdf_universita = gdf_universita[column_sec2_uni.keys()]\n",
+    "gdf_universita = gdf_universita.rename(columns=column_sec2_uni)\n",
     "gdf_universita[\"Grado\"] = \"Università\""
    ]
   },
@@ -404,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a49cecfc",
    "metadata": {},
    "outputs": [],
@@ -423,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6d213329",
    "metadata": {},
    "outputs": [],
@@ -441,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8004b41a",
    "metadata": {},
    "outputs": [],
@@ -458,18 +443,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a58de58c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "\n",
-    "from my_paths import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c67ad38a",
    "metadata": {},
@@ -479,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "75d186dd",
    "metadata": {},
    "outputs": [],
@@ -487,9 +460,8 @@
     "gdf = gpd.read_file(PATH_FARMACIE_RAW)\n",
     "column = {\n",
     "    \"DESCRIZIONE_FARMACIA\": \"Descrizione_farmacia\",\n",
-    "    \"CAP\":\"CAP\",\n",
     "    \"MUNICIPIO\": \"Municipio\",\n",
-    "    \"NIL\": \"Quartiere\",\n",
+    "    \"NIL\": \"NIL\",\n",
     "    \"LONGITUDINE\": \"Longitudine\",\n",
     "    \"LATITUDINE\": \"Latitudine\",\n",
     "    \"geometry\": \"geometry\"\n",
@@ -509,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "c723552f",
    "metadata": {},
    "outputs": [],
@@ -535,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "b4a1e8ec",
    "metadata": {},
    "outputs": [],
@@ -555,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "fbd84e01",
    "metadata": {},
    "outputs": [],
@@ -575,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "1177187b",
    "metadata": {},
    "outputs": [],
@@ -596,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "42e09b7e",
    "metadata": {},
    "outputs": [],
@@ -621,10 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "id": "20d81422",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n"
+     ]
+    }
+   ],
    "source": [
     "# Salvo GeoJSON pulito\n",
     "gdf.to_file(PATH_AREE_GIOCO_CLEAN, driver=\"GeoJSON\")"
@@ -651,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "8ba46c12",
    "metadata": {},
    "outputs": [
@@ -671,7 +652,7 @@
     "df = df[df[\"sottotipo\"].str.upper().isin([\"TEATRO\", \"AUDITORIUM\"])]\n",
     "columns = {\n",
     "    \"denominaz\": \"nome_teatro\",\n",
-    "    \"sottotipo\": \"sottotipo\",\n",
+    "    \"sottotipo\": \"tipologia\",\n",
     "    \"id\": \"id_teatro\",\n",
     "    \"zona\": \"municipio\",\n",
     "    \"glongitude\": \"longitudine\",\n",
@@ -703,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "81efae51",
    "metadata": {},
    "outputs": [],
@@ -723,7 +704,7 @@
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns)\n",
     "\n",
-    "gpd.GeoDataFrame(df, geometry='geometry', crs='EPSG:4326').to_file(PATH_CINEMA_CLEAN, driver=\"GeoJSON\")"
+    "gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD).to_file(PATH_CINEMA_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -736,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "ff1a3538",
    "metadata": {},
    "outputs": [],
@@ -756,13 +737,109 @@
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns)\n",
     "\n",
-    "gpd.GeoDataFrame(df, geometry='geometry', crs='EPSG:4326').to_file(PATH_MUSEI_CLEAN, driver=\"GeoJSON\")"
+    "gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD).to_file(PATH_MUSEI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57848292",
+   "metadata": {},
+   "source": [
+    "# Ospedali"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32adcb2a",
+   "metadata": {},
+   "source": [
+    "### Ingestion da openstreet maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e7dcd0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place = \"Milano, Italy\"\n",
+    "\n",
+    "tags = {\n",
+    "    \"amenity\":  [\"hospital\"],\n",
+    "}\n",
+    "\n",
+    "gdf = ox.features.features_from_place(place, tags)\n",
+    "gdf.to_file(PATH_OSPEDALI_RAW, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c643be91",
+   "metadata": {},
+   "source": [
+    "### Etl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ef20f929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_OSPEDALI_RAW)\n",
+    "gdf = gdf[gdf[\"element\"] != \"relation\"]\n",
+    "column = {\n",
+    "    \"name\": \"Denominazione\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "gdf = gdf[column.keys()]\n",
+    "gdf = gdf.rename(columns=column)\n",
+    "gdf.set_crs(CRS_GRAD).to_file(PATH_OSPEDALI_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9a203a8",
+   "metadata": {},
+   "source": [
+    "# Case dell'acqua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b472250e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carica il file GeoJSON\n",
+    "gdf = gpd.read_file(PATH_CASE_ACQUA_RAW)\n",
+    "\n",
+    "# Rimuovo le colonne indesiderate\n",
+    "gdf = gdf.drop(columns=[\"CAP\", \"ID_NIL\", \"Location\"])\n",
+    "\n",
+    "# Rinomino le colonne\n",
+    "gdf = gdf.rename(columns={\n",
+    "    \"LONG_X_4326\": \"longitudine\",\n",
+    "    \"LAT_Y_4326\": \"latitudine\"\n",
+    "})\n",
+    "\n",
+    "# Creo la colonna geometry \n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
+    "\n",
+    "# Imposto il sistema di coordinate\n",
+    "gdf = gdf.set_crs(CRS_GRAD)\n",
+    "\n",
+    "# Esporto il GeoJSON pulito\n",
+    "gdf.to_file(PATH_CASE_ACQUA_CLEAN, driver=\"GeoJSON\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -776,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
