--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "84ed6b83",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3a4e52ed",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,8 @@
     "\n",
     "PATH_CICLABILI_PICKLE_STAGING = \"../Data/Staging/Info_bici/ciclabile.pickle\"\n",
     "PATH_CICLABILI_GEOJSON_STAGING = \"../Data/Staging/Info_bici/ciclabile.geojson\"\n",
+    "PATH_GEOJSON_STRADE_E_CICLABILI_STAGING = \"../Data/Staging/Analisi/strade_e_ciclabili.geojson\"\n",
+    "PATH_GEOJSON_COMPLETO_STAGING = \"../Data/Staging/Analisi/completo.geojson\"\n",
     "\n",
     "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\""
    ]
@@ -73,18 +75,37 @@
    "id": "e4b383fc",
    "metadata": {},
    "source": [
-    "Carichiamo il file da Row e modifichiamolo"
+    "Carichiamo il file da Raw e modifichiamolo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
     "    G_strade = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "904347ed",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo un peso in base alla lunghezza della strada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ba1cf76f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
+    "    data['weight'] = data['length']"
    ]
   },
   {
@@ -97,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d83de30b",
    "metadata": {},
    "outputs": [],
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "02eef17a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -180,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4770ac5f",
    "metadata": {},
    "outputs": [],
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c393c9b3",
    "metadata": {},
    "outputs": [],
@@ -231,14 +252,12 @@
     "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
     "    G_strade = pickle.load(f)\n",
     "\n",
-    "# Carichiamo Parchi GeoDataFrame\n",
-    "gdf_parchi = gpd.read_file(PATH_PARCHI_RAW)\n",
-    "\n",
-    "# Troviamo i centroid e mettiamoli in un dizionari di Punti come tuple\n",
-    "gdf_parchi[\"centroid\"] = gdf_parchi.geometry.centroid\n",
-    "poi_nodes = {}\n",
-    "for idx, row in gdf_parchi.iterrows():\n",
-    "    poi_nodes[idx] = (row[\"centroid\"].x, row[\"centroid\"].y)"
+    "for n in G_ciclabili.nodes:\n",
+    "    G_ciclabili.nodes[n][\"origin\"] = \"strada\"\n",
+    "for n in G_strade.nodes:\n",
+    "    G_strade.nodes[n][\"origin\"] = \"pista\"\n",
+    "G_compose = nx.compose(G_strade, G_ciclabili)\n",
+    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose)"
    ]
   },
   {
@@ -246,16 +265,51 @@
    "id": "25f5b299",
    "metadata": {},
    "source": [
-    "Uniamo in un unico graph"
+    "Uniamo in un unico graph e aggiungiamo le connessioni tra i due con lo stesso meccanismo usato prima"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "659b6411",
+   "execution_count": 9,
+   "id": "32af8897",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdf_compose = ox.graph_to_gdfs(G_compose_merged, edges=True, nodes=False)\n",
+    "gdf_compose.to_file(PATH_GEOJSON_STRADE_E_CICLABILI_STAGING, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "659b6411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carichiamo Parchi GeoDataFrame\n",
+    "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN)\n",
+    "\n",
+    "G_compose_merged_parchi = Graph_functions.connect_poi_nodes_to_graph(G_compose_merged, gdf_parchi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2d3de343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_compose = ox.graph_to_gdfs(G_compose_merged_parchi, edges=True, nodes=False)\n",
+    "gdf_compose.to_file(PATH_GEOJSON_COMPLETO_STAGING, driver=\"GeoJSON\")"
+   ]
   }
  ],
  "metadata": {
