--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "84ed6b83",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3a4e52ed",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6c9e2a7f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
@@ -99,13 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "ba1cf76f",
    "metadata": {},
    "outputs": [],
    "source": [
     "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
-    "    data['weight'] = data['length']"
+    "    data['weight'] = data['length'] * 2 # Per ora\n",
+    "    data[\"tipo\"] = \"Strade_ciclabili\"\n",
+    "    data[\"artificiale\"] = False"
    ]
   },
   {
@@ -118,13 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "d83de30b",
    "metadata": {},
    "outputs": [],
    "source": [
     "G_strade = G_strade.to_undirected()\n",
-    "G_strade = Graph_functions.add_edge_near_nodes(G_strade)"
+    "G_strade = Graph_functions.add_edge_near_nodes(G_strade,\n",
+    "                                               weight_moltiplicator=2,  # Per ora\n",
+    "                                               tipo = \"Strade_ciclabili\", artificiale = True)"
    ]
   },
   {
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "02eef17a",
    "metadata": {},
    "outputs": [],
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +190,7 @@
     "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
     "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
     "\n",
-    "G_ciclabili = Graph_functions.geojson_to_graph(gdf_ciclabili_staging)\n",
+    "G_ciclabili = Graph_functions.geojson_to_graph(gdf_ciclabili_staging, weight_moltiplicator=1, tipo = \"Ciclabile\", artificiale = False)\n",
     "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_ciclabili, f)"
    ]
@@ -201,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4770ac5f",
    "metadata": {},
    "outputs": [],
@@ -212,7 +216,7 @@
     "\n",
     "# Aggiungiamo archi artificiali\n",
     "G_ciclabili = G_ciclabili.to_undirected()\n",
-    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili)\n",
+    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili, weight_moltiplicator = 1, tipo = \"Ciclabili\", artificiale = True)\n",
     "\n",
     "# Salviamo pickle e geojson in staging\n",
     "_, gdf_edges = ox.graph_to_gdfs(G_ciclabili)\n",
@@ -239,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c393c9b3",
    "metadata": {},
    "outputs": [],
@@ -257,7 +261,10 @@
     "for n in G_strade.nodes:\n",
     "    G_strade.nodes[n][\"origin\"] = \"pista\"\n",
     "G_compose = nx.compose(G_strade, G_ciclabili)\n",
-    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose)"
+    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose,\n",
+    "                                                       weight_moltiplicator = 1.5,\n",
+    "                                                       tipo = \"Join_ciclabile_strade\",\n",
+    "                                                       artificiale=True)"
    ]
   },
   {
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "32af8897",
    "metadata": {},
    "outputs": [],
@@ -281,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "659b6411",
    "metadata": {},
    "outputs": [
@@ -297,12 +304,16 @@
     "# Carichiamo Parchi GeoDataFrame\n",
     "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN)\n",
     "\n",
-    "G_compose_merged_parchi = Graph_functions.connect_poi_nodes_to_graph(G_compose_merged, gdf_parchi)"
+    "G_compose_merged_parchi = Graph_functions.connect_poi_nodes_to_graph(G_compose_merged, gdf_parchi,\n",
+    "                                                                     weight_moltiplicator=1,\n",
+    "                                                                     tipo = \"parchi\",\n",
+    "                                                                     poi = True,\n",
+    "                                                                     artificial=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2d3de343",
    "metadata": {},
    "outputs": [],
