--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "84ed6b83",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3a4e52ed",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4770ac5f",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
     "\n",
     "# Aggiungiamo archi artificiali\n",
     "G_ciclabili = G_ciclabili.to_undirected()\n",
-    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili, weight_moltiplicator = 1, tipo = \"Ciclabili\", artificiale = True)\n",
+    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili, weight_moltiplicator = 1, tipo = \"Ciclabile\", artificiale = True)\n",
     "\n",
     "# Salviamo pickle e geojson in staging\n",
     "_, gdf_edges = ox.graph_to_gdfs(G_ciclabili)\n",
